Missed a file for the project changes.
--HG--
branch : BraveCobra

--- a/ZeroDoc/Source/Project.vcxproj.filters
+++ b/ZeroDoc/Source/Project.vcxproj.filters
@@ -43,7 +43,9 @@
     <ClInclude Include="DocTypeParser.hpp">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="MacroDocTests.hpp" />
+    <ClInclude Include="MacroDocTests.hpp">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
