Fixed the build maker's exe outputting to a crazy relative path.- Fixed the hgignore to deal with this.- Fixed a warning.-
--HG--
branch : BraveCobra

--- a/.hgignore
+++ b/.hgignore
@@ -13,6 +13,8 @@ syntax: glob
 
 ZeroDoc/LocalBuildEnvironment.cmd
 BuildMaker/LocalBuildEnvironment.cmd
+BuildMaker/BuildInstall/bin/*
+BuildMaker/BuildInstall/obj/*
 ZeroCrashHandler/ZeroCrashHandler/bin/
 ZeroCrashHandler/ZeroCrashHandler/obj/
 SourceIndexer/SourceIndexer/bin/
