Updated the launcher builder to query a local exe for the major version id.- Moved some common code into a shared library with the BuildMaker.-

--- a/.hgignore
+++ b/.hgignore
@@ -15,6 +15,8 @@ ZeroDoc/LocalBuildEnvironment.cmd
 BuildMaker/LocalBuildEnvironment.cmd
 BuildMaker/BuildInstall/bin/*
 BuildMaker/BuildInstall/obj/*
+SharedBuildHelpers/bin/*
+SharedBuildHelpers/obj/*
 ZeroCrashHandler/ZeroCrashHandler/bin/
 ZeroCrashHandler/ZeroCrashHandler/obj/
 SourceIndexer/SourceIndexer/bin/
