--- a/ZeroDoc/Source/Project.vcxproj
+++ b/ZeroDoc/Source/Project.vcxproj
@@ -116,6 +116,9 @@
     <ProjectReference Include="..\..\..\Systems\Physics\Physics.vcxproj">
       <Project>{b1397fe7-b02a-4689-8f19-719bf0e70e7c}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\ZeroLibraries\AudioEngine\AudioEngine.vcxproj">
+      <Project>{fa3c580e-8e06-466a-8eb1-34bb2efed4fa}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\ZeroLibraries\Common\Common.vcxproj">
       <Project>{3a62ce69-835e-4d16-86c2-5326625a18bc}</Project>
     </ProjectReference>
