Added ZilchTypeToCppClassList, fixed release build, and fixed dependencies.
Auditors: joshua.davis

--- a/ZeroDoc/Source/Project.vcxproj
+++ b/ZeroDoc/Source/Project.vcxproj
@@ -48,7 +48,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
-      <AdditionalLibraryDirectories>$(ZERO_SOURCE)\External\Freetype\lib;$(ZERO_SOURCE)\External\GLEW\lib;$(ZERO_SOURCE)\External\CEF\lib;$(ZERO_SOURCE)\External\libpng\lib;$(ZERO_SOURCE)\External\Curl\lib;$(ZERO_SOURCE)\External\zlib\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ZERO_SOURCE)\ZeroLibraries\AudioEngine;$(ZERO_SOURCE)\External\Freetype\lib;$(ZERO_SOURCE)\External\GLEW\lib;$(ZERO_SOURCE)\External\CEF\lib;$(ZERO_SOURCE)\External\libpng\lib;$(ZERO_SOURCE)\External\Curl\lib;$(ZERO_SOURCE)\External\zlib\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>libcef.lib;zlib.lib;Winmm.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -58,11 +58,12 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <DelayLoadDLLs>portaudio_x86.dll;</DelayLoadDLLs>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Link>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
     </Link>
