--- a/ZeroCrashHandler/ZeroCrashHandler/ZeroCrashHandler.csproj
+++ b/ZeroCrashHandler/ZeroCrashHandler/ZeroCrashHandler.csproj
@@ -82,10 +82,19 @@
     <Compile Include="Main.Designer.cs">
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrivacyDisplay.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrivacyDisplay.Designer.cs">
+      <DependentUpon>PrivacyDisplay.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PrivacyDisplay.resx">
+      <DependentUpon>PrivacyDisplay.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
